Update ChatGPT for developers - CHATBOT.ipynb

--- a/CHATGpt for developers/ChatGPT for developers - CHATBOT.ipynb
+++ b/CHATGpt for developers/ChatGPT for developers - CHATBOT.ipynb
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "import openai\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"sk-O...\"\n",
     "\n",
     "## ritesh kapse's open ai acoount api key"
    ]
