Update ChatGPT for developers - Guidelines.ipynb

--- a/CHATGpt for developers/ChatGPT for developers - Guidelines.ipynb
+++ b/CHATGpt for developers/ChatGPT for developers - Guidelines.ipynb
@@ -12,7 +12,7 @@
     "#pip install openai\n",
     "\n",
     "import openai\n",
-    "openai.api_key = \"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\""
+    "openai.api_key = \"sk-...\""
    ]
   },
   {
@@ -85,7 +85,7 @@
     "'''\n",
     "\n",
     "import openai\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"sk-...\"\n",
     "\n",
     "text = f\"\"\"\n",
     "You should express what you want a model to do by \\ \n",
@@ -142,7 +142,7 @@
    "source": [
     "#Tactic 2: Ask for a structured output¶\n",
     "import openai\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"sk-...\"\n",
     "\n",
     "prompt = f\"\"\"\n",
     "Generate a list of three made-up book titles along \\ \n",
@@ -178,7 +178,7 @@
    "source": [
     "#Tactic 3: Ask the model to check whether conditions are satisfied\n",
     "import openai\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"sk-...\"\n",
     "\n",
     "text_1 = f\"\"\"\n",
     "Making a cup of tea is easy! First, you need to get some \\ \n",
@@ -228,7 +228,7 @@
    ],
    "source": [
     "import openai\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"sk-...\"\n",
     "\n",
     "\n",
     "text_2 = f\"\"\"\n",
@@ -278,7 +278,7 @@
    ],
    "source": [
     "import openai\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"sk-...\"\n",
     "\n",
     "\n",
     "prompt = f\"\"\"\n",
@@ -323,7 +323,7 @@
    ],
    "source": [
     "import openai\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"sk-..\"\n",
     "\n",
     "\n",
     "text = f\"\"\"\n",
