Update ChatGPT for developers - Guidelines.ipynb

--- a/CHATGpt for developers/ChatGPT for developers - Guidelines.ipynb
+++ b/CHATGpt for developers/ChatGPT for developers - Guidelines.ipynb
@@ -467,7 +467,7 @@
    ],
    "source": [
     "import openai\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"sk-...\"\n",
     "\n",
     "\n",
     "prompt = f\"\"\"\n",
