--- a/CHATGpt for developers/ChatGPT for developers - Infering.ipynb
+++ b/CHATGpt for developers/ChatGPT for developers - Infering.ipynb
@@ -10,7 +10,7 @@
     "import openai\n",
     "import os\n",
     "\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"sk-..\"\n",
     "\n",
     "from dotenv import load_dotenv, find_dotenv\n",
     "_ = load_dotenv(find_dotenv()) # read local .env file\n",
@@ -43,7 +43,7 @@
    "outputs": [],
    "source": [
     "import openai\n",
-    "openai.api_key = \"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\""
+    "openai.api_key = \"sk-...\""
    ]
   },
   {
