--- a/CHATGpt for developers/ChatGPT for developers - Iterative.ipynb
+++ b/CHATGpt for developers/ChatGPT for developers - Iterative.ipynb
@@ -10,7 +10,7 @@
     "import openai\n",
     "import os\n",
     "\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"sk-...\"\n",
     "\n",
     "from dotenv import load_dotenv, find_dotenv\n",
     "_ = load_dotenv(find_dotenv()) # read local .env file\n",
@@ -149,7 +149,7 @@
    ],
    "source": [
     "import openai\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"sk-....\"\n",
     "\n",
     "prompt = f\"\"\"\n",
     "Your task is to help a marketing team create a \n",
