Update ChatGPT for developers - Summarizing.ipynb

--- a/CHATGpt for developers/ChatGPT for developers - Summarizing.ipynb
+++ b/CHATGpt for developers/ChatGPT for developers - Summarizing.ipynb
@@ -10,7 +10,7 @@
     "import openai\n",
     "import os\n",
     "\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"sk-...\"\n",
     "\n",
     "from dotenv import load_dotenv, find_dotenv\n",
     "_ = load_dotenv(find_dotenv()) # read local .env file\n",
@@ -43,7 +43,7 @@
    "outputs": [],
    "source": [
     "import openai\n",
-    "openai.api_key = \"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\""
+    "openai.api_key = \"sk-...\""
    ]
   },
   {
@@ -54,7 +54,7 @@
    "outputs": [],
    "source": [
     "import openai\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"sk-...\"\n",
     "\n",
     "prod_review = \"\"\"\n",
     "Got this panda plush toy for my daughter's birthday, \\\n",
@@ -84,7 +84,7 @@
    ],
    "source": [
     "import openai\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"sk-...\"\n",
     "\n",
     "prompt = f\"\"\"\n",
     "Your task is to generate a short summary of a product \\\n",
@@ -116,7 +116,7 @@
    ],
    "source": [
     "import openai\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"sk-...\"\n",
     "\n",
     "prompt = f\"\"\"\n",
     "Your task is to generate a short summary of a product \\\n",
@@ -148,7 +148,7 @@
    ],
    "source": [
     "import openai\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"sk-...\"\n",
     "\n",
     "prompt = f\"\"\"\n",
     "Your task is to generate a short summary of a product \\\n",
@@ -182,7 +182,7 @@
    ],
    "source": [
     "import openai\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"sk-...\"\n",
     "\n",
     "prompt = f\"\"\"\n",
     "Your task is to generate a short summary of a product \\\n",
@@ -219,7 +219,7 @@
     "#Try \"extract\" instead of \"summarize\"\n",
     "\n",
     "import openai\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"sk-...\"\n",
     "\n",
     "prompt = f\"\"\"\n",
     "Your task is to extract relevant information from \\ \n",
@@ -246,7 +246,7 @@
    "source": [
     "#multiple product review summary\n",
     "import openai\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"sk-...\"\n",
     "\n",
     "review_1 = prod_review \n",
     "\n",
@@ -360,7 +360,7 @@
    ],
    "source": [
     "import openai\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"sk-...\"\n",
     "\n",
     "for i in range(len(reviews)):\n",
     "    prompt = f\"\"\"\n",
