Update ChatGPT for developers - Transforming.ipynb

--- a/CHATGpt for developers/ChatGPT for developers - Transforming.ipynb
+++ b/CHATGpt for developers/ChatGPT for developers - Transforming.ipynb
@@ -10,7 +10,7 @@
     "import openai\n",
     "import os\n",
     "\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"sk-...\"\n",
     "\n",
     "from dotenv import load_dotenv, find_dotenv\n",
     "_ = load_dotenv(find_dotenv()) # read local .env file\n",
@@ -43,7 +43,7 @@
    "outputs": [],
    "source": [
     "import openai\n",
-    "openai.api_key = \"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\""
+    "openai.api_key = \"sk-...\""
    ]
   },
   {
@@ -62,7 +62,7 @@
    ],
    "source": [
     "import openai\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"sk-...\"\n",
     "\n",
     "prompt = f\"\"\"\n",
     "Translate the following English text to Spanish: \\ \n",
@@ -88,7 +88,7 @@
    ],
    "source": [
     "import openai\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"sk-...\"\n",
     "\n",
     "prompt = f\"\"\"\n",
     "Tell me which language this is: \n",
@@ -116,7 +116,7 @@
    ],
    "source": [
     "import openai\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"sk-...\"\n",
     "\n",
     "prompt = f\"\"\"\n",
     "Translate the following  text to French and Spanish\n",
@@ -144,7 +144,7 @@
    ],
    "source": [
     "import openai\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"sk-...\"\n",
     "prompt = f\"\"\"\n",
     "Translate the following text to Spanish in both the \\\n",
     "formal and informal forms: \n",
@@ -162,7 +162,7 @@
    "outputs": [],
    "source": [
     "import openai\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"sk-...\"\n",
     "\n",
     "user_messages = [\n",
     "  \"La performance du système est plus lente que d'habitude.\",  # System performance is slower than normal         \n",
@@ -181,7 +181,7 @@
    "outputs": [],
    "source": [
     "import openai\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"sk-...\"\n",
     "\n",
     "for issue in user_messages:\n",
     "    prompt = f\"Tell me what language this is: ```{issue}```\"\n",
@@ -204,7 +204,7 @@
    "outputs": [],
    "source": [
     "import openai\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"sk-...\"\n",
     "\n",
     "prompt = f\"\"\"\n",
     "Translate the following from slang to a business letter: \n",
